--- a/package.json
+++ b/package.json
@@ -2,35 +2,41 @@
   "name": "@scarf005/eslint-config-transcendence",
   "version": "1.0.0",
   "description": "typescript configuration for transcendence project",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/exciting-transcendence/eslint-config-transcendence.git"
-  },
-  "keywords": [
-    "eslint"
-  ],
   "author": "scarf005",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/exciting-transcendence/eslint-config-transcendence/issues"
   },
   "homepage": "https://github.com/exciting-transcendence/eslint-config-transcendence#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/exciting-transcendence/eslint-config-transcendence.git"
+  },
+  "keywords": [
+    "eslint",
+    "eslintconfig"
+  ],
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "prettier": "@scarf005/prettier-config-transcendence",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1"
+    "@typescript-eslint/eslint-plugin": ">=5.31.0",
+    "@typescript-eslint/parser": ">=5.31.0",
+    "eslint": ">=8.20.0",
+    "eslint-plugin-prettier": ">=4.2.1",
+    "eslint-plugin-react": ">=7.30.1",
+    "typescript": ">=4.7.4",
+    "@scarf005/prettier-config-transcendence": ">=0.0.0"
   },
   "peerDependency": {
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1"
+    "typescript": ">=4.7.4",
+    "eslint": ">=8.20.0",
+    "@typescript-eslint/eslint-plugin": ">=5.31.0",
+    "@typescript-eslint/parser": ">=5.31.0",
+    "eslint-plugin-prettier": ">=4.2.1",
+    "eslint-plugin-react": ">=7.30.1",
+    "@scarf005/prettier-config-transcendence": ">=0.0.0"
   }
 }
