fix: fix errors

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,6 +5,7 @@ parserOptions:
 plugins:
   - "@typescript-eslint/eslint-plugin"
   - prettier
+  - react
 extends:
   - plugin:@typescript-eslint/recommended
 root: true
