--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -29,3 +29,29 @@ rules:
     - multiline:
         delimiter: none
         requireLast: false
+  "@typescript-eslint/naming-convention":
+    - warn
+    - selector: default
+      format: [camelCase, PascalCase, UPPER_CASE]
+    - selector: enumMember
+      format: [UPPER_CASE]
+    - selector: [class]
+      format: [PascalCase]
+    - selector: interface
+      format: [PascalCase]
+      custom:
+        regex: ^I[a-zA-Z]
+        match: false
+    - selector:
+        [
+          classProperty,
+          objectLiteralProperty,
+          typeProperty,
+          classMethod,
+          objectLiteralMethod,
+          typeMethod,
+          accessor,
+          enumMember,
+        ]
+      modifiers: [requiresQuotes]
+      format: null
