--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scarf005/eslint-config-transcendence",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "typescript configuration for transcendence project",
   "author": "scarf005",
   "license": "ISC",
@@ -25,7 +25,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prettier": "@scarf005/prettier-config-transcendence",
-  "devDependencies": {
+  "dependencies": {
     "@scarf005/prettier-config-transcendence": "^1.0.1",
     "@typescript-eslint/eslint-plugin": ">=5.31.0",
     "@typescript-eslint/parser": ">=5.31.0",
@@ -33,18 +33,9 @@
     "eslint-plugin-prettier": ">=4.2.1",
     "eslint-plugin-react": ">=7.30.1",
     "prettier": "^2.7.1",
-    "typescript": ">=4.7.4",
-    "yaml": "^2.1.1"
+    "typescript": ">=4.7.4"
   },
-  "peerDependencies": {
-    "@scarf005/prettier-config-transcendence": ">=0.0.0",
-    "@typescript-eslint/eslint-plugin": ">=5.31.0",
-    "@typescript-eslint/parser": ">=5.31.0",
-    "eslint": ">=8.20.0",
-    "eslint-plugin-prettier": ">=4.2.1",
-    "eslint-plugin-react": ">=7.30.1",
-    "prettier": "^2.7.1",
-    "typescript": ">=4.7.4",
+  "devDependencies": {
     "yaml": "^2.1.1"
   }
 }
