--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -29,10 +29,16 @@ rules:
     - multiline:
         delimiter: none
         requireLast: false
+      singleline:
+        delimiter: comma
+        requireLast: false
+  "@typescript-eslint/no-unused-vars":
+    - warn
+    - argsIgnorePattern: ^_
+      varsIgnorePattern: ^_
+      caughtErrorsIgnorePattern: ^_
   "@typescript-eslint/naming-convention":
     - warn
-    - selector: default
-      format: [camelCase, PascalCase, UPPER_CASE]
     - selector: enumMember
       format: [UPPER_CASE]
     - selector: [class]
